--- a/src/json/functionkey_summary.json.erb
+++ b/src/json/functionkey_summary.json.erb
@@ -1,8 +1,8 @@
 {
-    "title": "FunctionkeySummary5555",
+    "title": "FunctionkeySummary6666",
     "rules": [
         {
-            "description": "FunctionkeySummary5555",
+            "description": "FunctionkeySummary6666",
             "manipulators": [
                 {
                 "description": "Double F1 -> Cmd+Opt+shift+2",
@@ -492,6 +492,132 @@
                 },
                 "conditions": [
                     { "type": "variable_if", "name": "f8_pressed", "value": 0 },
+                    {
+                    "type": "frontmost_application_unless",
+                    "bundle_identifiers": [
+                        "^com.vmware.fusion$",
+                        "^com.vmware.horizon$",
+                        "^com.vmware.view$",
+                        "^com.parallels.desktop$",
+                        "^com.parallels.vm$",
+                        "^com.parallels.desktop.console$",
+                        "^org.virtualbox.app.VirtualBoxVM$",
+                        "^com.vmware.proxyApp.",
+                        "^com.parallels.winapp."
+                    ]
+                    }
+                ]
+                },
+                {
+                "description": "Double F9 -> Cmd+Opt+control+8",
+                "type": "basic",
+                "from": { "key_code": "f9" },
+                "to": [
+                    { "set_variable": { "name": "f9_pressed", "value": 0 } },
+                    { "key_code": "8", "modifiers": ["command", "option", "control"] }
+                ],
+                "conditions": [
+                    { "type": "variable_if", "name": "f9_pressed", "value": 1 },
+                    {
+                    "type": "frontmost_application_unless",
+                    "bundle_identifiers": [
+                        "^com.vmware.fusion$",
+                        "^com.vmware.horizon$",
+                        "^com.vmware.view$",
+                        "^com.parallels.desktop$",
+                        "^com.parallels.vm$",
+                        "^com.parallels.desktop.console$",
+                        "^org.virtualbox.app.VirtualBoxVM$",
+                        "^com.vmware.proxyApp.",
+                        "^com.parallels.winapp."
+                    ]
+                    }
+                ]
+                },
+                {
+                "description": "Single F9 -> Cmd+Opt+control+7 (delayed, canceled by double-press)",
+                "type": "basic",
+                "from": { "key_code": "f9" },
+                "to": [
+                    { "set_variable": { "name": "f9_pressed", "value": 1 } }
+                ],
+                "to_delayed_action": {
+                    "to_if_invoked": [
+                    { "key_code": "7", "modifiers": ["command", "option", "control"] },
+                    { "set_variable": { "name": "f9_pressed", "value": 0 } }
+                    ],
+                    "to_if_canceled": [
+                    { "set_variable": { "name": "f9_pressed", "value": 0 } }
+                    ]
+                },
+                "parameters": {
+                    "basic.to_delayed_action_delay_milliseconds": 300
+                },
+                "conditions": [
+                    { "type": "variable_if", "name": "f9_pressed", "value": 0 },
+                    {
+                    "type": "frontmost_application_unless",
+                    "bundle_identifiers": [
+                        "^com.vmware.fusion$",
+                        "^com.vmware.horizon$",
+                        "^com.vmware.view$",
+                        "^com.parallels.desktop$",
+                        "^com.parallels.vm$",
+                        "^com.parallels.desktop.console$",
+                        "^org.virtualbox.app.VirtualBoxVM$",
+                        "^com.vmware.proxyApp.",
+                        "^com.parallels.winapp."
+                    ]
+                    }
+                ]
+                },
+                {
+                "description": "Double F10 -> Cmd+Opt+control+hyphen",
+                "type": "basic",
+                "from": { "key_code": "f10" },
+                "to": [
+                    { "set_variable": { "name": "f10_pressed", "value": 0 } },
+                    { "key_code": "hyphen", "modifiers": ["command", "option", "control"] }
+                ],
+                "conditions": [
+                    { "type": "variable_if", "name": "f10_pressed", "value": 1 },
+                    {
+                    "type": "frontmost_application_unless",
+                    "bundle_identifiers": [
+                        "^com.vmware.fusion$",
+                        "^com.vmware.horizon$",
+                        "^com.vmware.view$",
+                        "^com.parallels.desktop$",
+                        "^com.parallels.vm$",
+                        "^com.parallels.desktop.console$",
+                        "^org.virtualbox.app.VirtualBoxVM$",
+                        "^com.vmware.proxyApp.",
+                        "^com.parallels.winapp."
+                    ]
+                    }
+                ]
+                },
+                {
+                "description": "Single F10 -> Cmd+Opt+control+9 (delayed, canceled by double-press)",
+                "type": "basic",
+                "from": { "key_code": "f10" },
+                "to": [
+                    { "set_variable": { "name": "f10_pressed", "value": 1 } }
+                ],
+                "to_delayed_action": {
+                    "to_if_invoked": [
+                    { "key_code": "9", "modifiers": ["command", "option", "control"] },
+                    { "set_variable": { "name": "f10_pressed", "value": 0 } }
+                    ],
+                    "to_if_canceled": [
+                    { "set_variable": { "name": "f10_pressed", "value": 0 } }
+                    ]
+                },
+                "parameters": {
+                    "basic.to_delayed_action_delay_milliseconds": 300
+                },
+                "conditions": [
+                    { "type": "variable_if", "name": "f10_pressed", "value": 0 },
                     {
                     "type": "frontmost_application_unless",
                     "bundle_identifiers": [
