--- a/src/json/functionkey_summary.json.erb
+++ b/src/json/functionkey_summary.json.erb
@@ -1,8 +1,8 @@
 {
-    "title": "FunctionkeySummary6666",
+    "title": "FunctionkeySummary7",
     "rules": [
         {
-            "description": "FunctionkeySummary6666",
+            "description": "FunctionkeySummary7",
             "manipulators": [
                 {
                 "description": "Double F1 -> Cmd+Opt+shift+2",
@@ -635,92 +635,67 @@
                 ]
                 },
                 {
-                    "description": "Double F11_GeneralPassword_serverPassword_fileOpen",
-                    "type": "basic",
-                    "from": {
-                        "key_code": "f11"
-                    },
-                    "to": [
-                        {
-                            "shell_command": "open '/Users/user/Dropbox/Password/server_ftp_password.ini'"
-                        }
-                    ],
-                    "conditions": [
-                        {
-                            "type": "variable_if",
-                            "name": "f11 pressed",
-                            "value": 1
-                        },
-                        {
-                            "type": "frontmost_application_unless",
-                            "bundle_identifiers": [
-                                "^com.vmware.fusion$",
-                                "^com.vmware.horizon$",
-                                "^com.vmware.view$",
-                                "^com.parallels.desktop$",
-                                "^com.parallels.vm$",
-                                "^com.parallels.desktop.console$",
-                                "^org.virtualbox.app.VirtualBoxVM$",
-                                "^com.vmware.proxyApp.",
-                                "^com.parallels.winapp."
-                            ]
-                        }
+                "description": "Double F11 -> Cmd+Opt+control+backslash",
+                "type": "basic",
+                "from": { "key_code": "f11" },
+                "to": [
+                    { "set_variable": { "name": "f11_pressed", "value": 0 } },
+                    { "key_code": "backslash", "modifiers": ["command", "option", "control"] }
+                ],
+                "conditions": [
+                    { "type": "variable_if", "name": "f11_pressed", "value": 1 },
+                    {
+                    "type": "frontmost_application_unless",
+                    "bundle_identifiers": [
+                        "^com.vmware.fusion$",
+                        "^com.vmware.horizon$",
+                        "^com.vmware.view$",
+                        "^com.parallels.desktop$",
+                        "^com.parallels.vm$",
+                        "^com.parallels.desktop.console$",
+                        "^org.virtualbox.app.VirtualBoxVM$",
+                        "^com.vmware.proxyApp.",
+                        "^com.parallels.winapp."
                     ]
+                    }
+                ]
                 },
                 {
-                    "type": "basic",
-                    "from": {
-                        "key_code": "f11"},
-                    "to": [
-                        {
-                            "set_variable": {
-                                "name": "f11 pressed",
-                                "value": 1
-                            }
-                        },
-                        {
-                            "shell_command": "open '/Users/user/Dropbox/Password/PasswordList.INI'"
-                        }
+                "description": "Single F11 -> Cmd+Opt+control+equal_sign (delayed, canceled by double-press)",
+                "type": "basic",
+                "from": { "key_code": "f11" },
+                "to": [
+                    { "set_variable": { "name": "f11_pressed", "value": 1 } }
+                ],
+                "to_delayed_action": {
+                    "to_if_invoked": [
+                    { "key_code": "equal_sign", "modifiers": ["command", "option", "control"] },
+                    { "set_variable": { "name": "f11_pressed", "value": 0 } }
                     ],
-                    "conditions": [
-                        {
-                            "type": "variable_if",
-                            "name": "f11 pressed",
-                            "value": 0
-                        },
-                        {
-                            "type": "frontmost_application_unless",
-                            "bundle_identifiers": [
-                                "^com.vmware.fusion$",
-                                "^com.vmware.horizon$",
-                                "^com.vmware.view$",
-                                "^com.parallels.desktop$",
-                                "^com.parallels.vm$",
-                                "^com.parallels.desktop.console$",
-                                "^org.virtualbox.app.VirtualBoxVM$",
-                                "^com.vmware.proxyApp.",
-                                "^com.parallels.winapp."
-                            ]
-                        }
-                    ],
-                    "to_delayed_action": {
-                        "to_if_invoked": [
-                            {
-                                "set_variable": {
-                                    "name": "f11 pressed",
-                                    "value": 0
-                                }
-                            }
-                        ],
-                        "to_if_canceled": [
-                            {
-                                "set_variable": {
-                                    "name": "f11 pressed",
-                                    "value": 0
-                                }
-                            }
-                        ]
+                    "to_if_canceled": [
+                    { "set_variable": { "name": "f11_pressed", "value": 0 } }
+                    ]
+                },
+                "parameters": {
+                    "basic.to_delayed_action_delay_milliseconds": 300
+                },
+                "conditions": [
+                    { "type": "variable_if", "name": "f11_pressed", "value": 0 },
+                    {
+                    "type": "frontmost_application_unless",
+                    "bundle_identifiers": [
+                        "^com.vmware.fusion$",
+                        "^com.vmware.horizon$",
+                        "^com.vmware.view$",
+                        "^com.parallels.desktop$",
+                        "^com.parallels.vm$",
+                        "^com.parallels.desktop.console$",
+                        "^org.virtualbox.app.VirtualBoxVM$",
+                        "^com.vmware.proxyApp.",
+                        "^com.parallels.winapp."
+                    ]
                     }
+                ]
                 }
             ]
         }
