--- a/src/json/functionkey_summary.json.erb
+++ b/src/json/functionkey_summary.json.erb
@@ -1,8 +1,8 @@
 {
-    "title": "FunctionkeySummary8",
+    "title": "FunctionkeySummary88",
     "rules": [
         {
-            "description": "FunctionkeySummary8",
+            "description": "FunctionkeySummary88",
             "manipulators": [
                 {
                 "description": "Double F1 -> Cmd+Opt+shift+2",
@@ -661,7 +661,7 @@
                 ]
                 },
                 {
-                "description": "Single F11 -> Cmd+Opt+control+equal_sign (delayed, canceled by double-press)",
+                "description": "Single F11 -> Cmd+Opt+Shift+backslash (delayed, canceled by double-press)",
                 "type": "basic",
                 "from": { "key_code": "f11" },
                 "to": [
@@ -669,7 +669,7 @@
                 ],
                 "to_delayed_action": {
                     "to_if_invoked": [
-                    { "key_code": "equal_sign", "modifiers": ["command", "option", "control"] },
+                    { "key_code": "backslash", "modifiers": ["command", "option", "shift"] },
                     { "set_variable": { "name": "f11_pressed", "value": 0 } }
                     ],
                     "to_if_canceled": [
