--- a/src/json/window_control.json.erb
+++ b/src/json/window_control.json.erb
@@ -1,8 +1,8 @@
 {
-    "title": "WindowControlSummary7",
+    "title": "WindowControlSummary",
     "rules": [
         {
-            "description": "WindowsControlSummary7",
+            "description": "WindowsControlSummary",
             "manipulators": [
                 {
                     "description": "LeftControl + U_WindowLeftUp",
@@ -206,9 +206,9 @@
                     "to": <%= to([["8", ["right_option", "right_gui"]]]) %>
                 },
                 {
-                    "description": "LeftOption + W_~/Work",
+                    "description": "RightOption + W_~/Work",
                     "type": "basic",
-                    "from": <%= from("w", ["left_option"], ["caps_lock"]) %>,
+                    "from": <%= from("w", ["right_option"], ["caps_lock"]) %>,
                     "to": <%= to([["close_bracket", ["left_shift", "left_option"]]]) %>
                 },
                 {
