--- a/src/json/double_push_key.json.erb
+++ b/src/json/double_push_key.json.erb
@@ -1,5 +1,5 @@
 {
-    "title": "DoublePushKey",
+    "title": "DoublePushKey99",
     "rules": [
         {
             "description": "Double RightShift_Clipboard History(Double Push)",
@@ -102,9 +102,9 @@
                     },
                     "to": [
                         {
-                            "key_code": "c",
+                            "pointing_button": "button1",
                             "modifiers": [
-                                "left_control"
+                                "left_gui"
                             ]
                         }
                     ],
@@ -112,9 +112,7 @@
                         {
                             "type": "frontmost_application_if",
                             "bundle_identifiers": [
-                                "^com.microsoft.VSCode$",
-                                "^com\.googlecode\.iterm2$",
-                                "^com.todesktop.230313mzl4w4u92$"
+                                "^com.microsoft.VSCode$"
                             ]
                         },
                         {
