--- a/src/json/double_push_key.json.erb
+++ b/src/json/double_push_key.json.erb
@@ -1,8 +1,8 @@
 {
-    "title": "DoublePushKey99",
+    "title": "DoublePushKey1",
     "rules": [
         {
-            "description": "Double RightShift_Clipboard History(Double Push)",
+            "description": "Double-RightShift_Clipboard History",
             "manipulators": [
                 {
                     "type": "basic",
@@ -88,7 +88,7 @@
             ]
         },
         {
-            "description": "Double LeftShift_Ctrl + C(Vscode-iterm2:Double Push)",
+            "description": "Double-LeftShift_followlink",
             "manipulators": [
                 {
                     "type": "basic",
