--- a/src/index.html.erb
+++ b/src/index.html.erb
@@ -41,6 +41,9 @@
          add_group("FrontmostIfVscode_summary", "frontmost_vscode_summary_setting", [
            "frontmost_vscode_summary.json",
          ])
+         add_group("FrontmostIfAntigravity_summary", "frontmost_antigravity_summary_setting", [
+           "frontmost_antigravity_summary.json",
+         ])
          add_group("FrontmostIfCursor_summary", "frontmost_cursor_summary_setting", [
            "frontmost_cursor_summary.json",
          ])
