--- a/src/json/frontmost_antigravity_summary.json.erb
+++ b/src/json/frontmost_antigravity_summary.json.erb
@@ -1,8 +1,8 @@
 {
-    "title": "FrontmostIfAntigravity_summary1",
+    "title": "FrontmostIfAntigravity_summary2",
     "rules": [
         {
-            "description": "FrontmostIfAntigravity_summary1",
+            "description": "FrontmostIfAntigravity_summary2",
             "manipulators": [
                 {
                     "description": "RightCommand + H_フォルダービューにフォーカスを置く",
@@ -183,7 +183,7 @@
                         {
                             "type": "frontmost_application_if",
                             "bundle_identifiers": [
-                                "^com.microsoft.VSCode$"
+                                "^com.google.antigravity$"
                             ]
                         }
                     ]
@@ -203,7 +203,7 @@
                         {
                             "type": "frontmost_application_if",
                             "bundle_identifiers": [
-                                "^com.microsoft.VSCode$"
+                                "^com.google.antigravity$"
                             ]
                         }
                     ]
@@ -227,7 +227,7 @@
                         {
                             "type": "frontmost_application_if",
                             "bundle_identifiers": [
-                                "^com.microsoft.VSCode$"
+                                "^com.google.antigravity$"
                             ]
                         }
                     ]
